--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,6 +133,11 @@ crossterm = {version = "0.10.2", optional = true}
 futures-timer = {version = "1.0.2", optional = true}
 url = {version = "2.1.0", optional = true}
 semver = {version = "0.9.0", optional = true}
+parking_lot = "0.10.0"
+
+[dependencies.rusqlite]
+version = "0.20.0"
+features = ["bundled", "blob"]
 
 [features]
 default = ["sys", "ps", "textview", "inc", "str"]
@@ -155,10 +160,6 @@ starship-prompt = ["starship"]
 sum = ["nu_plugin_sum"]
 trace = ["nu-parser/trace"]
 tree = ["nu_plugin_tree"]
-
-[dependencies.rusqlite]
-version = "0.20.0"
-features = ["bundled", "blob"]
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
