--- a/crates/nu_plugin_ps/Cargo.toml
+++ b/crates/nu_plugin_ps/Cargo.toml
@@ -12,11 +12,9 @@ nu-protocol = { path = "../nu-protocol", version = "0.7.0" }
 nu-source = { path = "../nu-source", version = "0.7.0" }
 nu-errors = { path = "../nu-errors", version = "0.7.0" }
 
-futures-preview = { version = "=0.3.0-alpha.19", features = ["compat", "io-compat"] }
 heim = "0.0.9"
-futures-timer = "1.0.3"
 pin-utils = "0.1.0-alpha.4"
-futures-util = "0.3.1"
+tokio = { version = "0.2", features = ["rt-core", "stream"] }
 
 [build-dependencies]
 nu-build = { version = "0.7.0", path = "../nu-build" }
